[package]
name = "vesting-contract-cli"
version = "0.1.0"
authors = ["Bonfida <contact@bonfida.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8"
solana-client = "1.8"
solana-sdk = "1.8"
solana-clap-utils = "1.8"
token-vesting =  { version = "0.1.0", path="../program", features=["no-entrypoint"] }
spl-token = {version = "3.2", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0", features = ["no-entrypoint"]}
clap = "2.34"
