[package]
name = "token-vesting"
version = "0.1.0"
authors = ["Elliott Benisty <elliott@bonfida.com>", "Lucas Chaumeny <lucas@bonfida.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = [
#     "fuzz"
# ]

[features]
no-entrypoint = []
test-bpf = []
# fuzz = ["arbitrary"]

[dependencies]
solana-program = "1.5.0"
thiserror = "1.0.23"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3.6"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
# arbitrary = { version = "0.4", features = ["derive"], optional = true }
# honggfuzz = { version = "0.5" }

[dev-dependencies]
solana-sdk = "1.5.0"
solana-program-test = "1.5.0"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

