[package]
name = "token-vesting"
version = "0.1.0"
authors = ["Elliott Benisty <elliott@bonfida.com>", "Lucas Chaumeny <lucas@bonfida.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "fuzz"
]

[features]
no-entrypoint = []
test-bpf = []
fuzz = ["arbitrary", "honggfuzz"]

[dependencies]
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3"
solana-program = "1.8"
spl-token = { version = "3.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0", features = ["no-entrypoint"] }
arbitrary = { version = "1.0", features = ["derive"], optional = true }
honggfuzz = { version = "0.5", optional = true }

[dev-dependencies]
solana-sdk = "1.8"
solana-program-test = "1.8"
tokio = { version = "1.14", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
