[package]
name = "token-vesting-fuzz"
version = "0.1.0"
authors = ["Elliott Benisty <elliott@bonfida.com>", "Lucas Chaumeny <lucas@bonfida.com>"]
publish = false
edition = "2018"

[dependencies]
honggfuzz = { version = "0.5" }
arbitrary = { version = "0.4", features = ["derive"] }
solana-program = "1.5.0"
solana-sdk = "1.5.0"
futures = "0.3"
solana-program-test = "1.5.0"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
token-vesting =  { version = "0.1.0", path="..", features=["fuzz"] }
tokio = { version = "0.3", features = ["macros"]}

[[bin]]
name = "vesting_fuzz"
path = "src/vesting_fuzz.rs"
test = false
doc = false